fixed ul and li spacing

--- a/public/src/styles/about-us.css
+++ b/public/src/styles/about-us.css
@@ -53,8 +53,15 @@
     .person p {
         max-width: 99%;
         height: 100%;
-        padding: 2%;
+        padding: 5%;
         max-height: 200%;
+        text-align: center;
+    }
+    #about-us-list {
+        padding: 0;
+        margin: 0;
+        display: flex;
+        justify-content: center;
     }
 }
 
